...
                modifier = Modifier
                    .weight(1f)
                    .padding(start = 12.dp)
            )
            IconButton(
                onClick = { onSearchActiveChange(true) },
                modifier = Modifier.testTag("top_search_icon")
            ) {
                Icon(Icons.Rounded.Search, contentDescription = null)
            }
        }
    }

...
                        if (searchActive) {
                            onSearchActiveChange(false)
                        } else {
                            navController.navigateUp()
                        }
                    },
                    modifier = Modifier.testTag("search_back_arrow"),
                ) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Rounded.ArrowBack,
                        contentDescription = null
                    )
                }
...
