...

                            TextButton(
                                onClick = {
                                    oobeStatus = OOBE_VERSION
                                    navController.navigateUp()
                                },
                                modifier = Modifier.testTag("oobe_skip")
                            ) {
                                Text(
                                    text = stringResource(R.string.action_skip),
                                    style = MaterialTheme.typography.bodyMedium
                                )
                            }
...
